[project]
name = "super-mario-rl" 
version = "0.1.0"
description = "A reinforcement learning agent that plays Super Mario Bros"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gym>=0.26.2",
    "gym-super-mario-bros>=7.4.0",
    "matplotlib>=3.10.0",
    "numpy<2.0.0",
    "opencv-python>=4.10.0.84",
    "ruff>=0.8.4",
    "torch>=2.5.1",
    "torchrl>=0.6.0",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
]


[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501", "F401", "F403", "F405"]
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

target-version = "py310"
